# rust-ddns

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
src/: main.rs  utils.rs
src/providers/: cloudflare.rs  mod.rs  namesilo.rs
