[package]
name = "rust-ddns"
version = "0.1.0"
authors = ["peter <peterghost86@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
default-config = []

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
serde_json = "1.0.59"
serde-xml-rs = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
public-ip = "0.1.0"
simple_logger = "1.11.0"
log = "0.4.14"
clap = "2.33.3"
